--- a/AppointmentScheduler/Views/Account/Register.cshtml
+++ b/AppointmentScheduler/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
 <form method="post" asp-action="Register" asp-controller="Account">
     <h4>Create a new account.</h4>
     <hr />
-  @*   <div asp-validation-summary="All" class="text-danger"></div> *@
+      <div asp-validation-summary="All" class="text-danger"></div> 
     <div class="form-group row">
         <label class="col-md-2" asp-for="Name"></label>
         <div class="col-md-10">
@@ -36,8 +36,7 @@
     <div class="form-group row">
         <label class="col-md-2" asp-for="RoleName"></label>
         <div class="col-md-10">
-            <select asp-for="RoleName" asp-items="@AppointmentScheduler.Utility.Helper.GetRolesForDropDown()" class="form-control" ></select>
-            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            <select asp-for="RoleName" asp-items="@AppointmentScheduler.Utility.Helper.GetRolesForDropDown()" class="form-control"></select>
         </div>
     </div>
     <div class="form-group">
@@ -48,8 +47,8 @@
     <p class="col-md-10 offset-md-2">
         <a asp-action="Login">Sing In</a>
     </p>
-   
-  
+
+
 </form>
 
 @section Scripts
