--- a/AppointmentScheduler/Views/Shared/_LoginPartial.cshtml
+++ b/AppointmentScheduler/Views/Shared/_LoginPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject Microsoft.AspNetCore.Identity.SignInManager<AppointmentScheduler.Models.ApplicationUser> signInManager
 @if (signInManager.IsSignedIn(User))
 {
-    <form method="post" id="logoutForm" asp-action="LogOff" asp-asp-controller="Account">
+    <form method="post" id="logoutForm" asp-action="Logoff" asp-asp-controller="Account">
         <ul class="nav nvbar-nav">
             <li class="nav-link">Hello, @User.Identity.Name!</li>
             <li class="nav-link"><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
