--- a/AppointmentScheduler/Views/Account/Register.cshtml
+++ b/AppointmentScheduler/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 <h2>Sing up</h2>
 
 <form method="post" asp-action="Register" asp-controller="Account">
-    <h4>Create a new account.</h4>
+    <h4>Create a new account. Jejavi je lep!</h4>
     <hr />
       <div asp-validation-summary="All" class="text-danger"></div> 
     <div class="form-group row">
