--- a/AppointmentScheduler/Views/Appointment/Index.cshtml
+++ b/AppointmentScheduler/Views/Appointment/Index.cshtml
@@ -3,7 +3,7 @@
         @if (User.IsInRole(AppointmentScheduler.Utility.Helper.Admin))
         {
             <div class="form-group row col-2" id="divDoctorList">
-                <label>Select DOctor</label>
+                <label>Select Doctor</label>
                 @Html.DropDownList("doctorId", new SelectList(ViewBag.DoctorList, "Id", "Name"), new { @class = "form-control select2" })
             </div>
         }
